# LLVM17_learning_repo

./: .gitignore  setup.sh
APPUNTI/: 1-introduzione.md  2-IR.md  3-passi-di-analisi.md  4-passi-di-trasformazione.md
Linguaggi-e-Compilatori-2022-2023/Tutorial-02/LocalOpts/lib/: Transform.cpp
Linguaggi-e-Compilatori-2022-2023/Tutorial-02/LocalOpts/testTransform/: Foo.ll
appunti/: loop-fusion.md  loop-invariant-code-motion.md  loops.md  memory.md  ottimizzazione_locale_e_LVN.md  passi_di_analisi.md
appunti_real/: IRs.md  dataflow_analysis.md  intro.md  intro_llvm.md  loop-invariant-code-motion.md  passi_di_analisi.md  passi_di_trasformazione.md  ssa.md
kaleidoscope/: Makefile  docs.md
kaleidoscope/code-listings/: README.md  chapter3.cpp  chapter4.cpp  chapter5.cpp
kaleidoscope/include/: ast.h  lexer.h  parser.h
kaleidoscope/kaleidoscope_files/: fibonacci.kal  iterative_fibonacci.kal  loop.kal  mandelbrot.kal  test_codegen.kal  test_for_with_mutation.kal  test_lexer.kal  test_parser.kal
kaleidoscope/progetto_organizzato_bene/: ast.cpp  lexer.cpp
kaleidoscope/src/: ast.cpp  lexer.cpp  main.cpp  parser.cpp  test_parser.kal
kaleidoscope/test/: codegen_test.cpp  lexer_test.cpp  parser_test.cpp
labs/assignment1/src/: CMakeLists.txt  assignment1.cpp
labs/assignment1/test/: algIdentity.ll  multipleInstruction.ll  strengthReduction.ll
labs/assignment2/: assignment2.md
labs/esempio-end2end/: prova.c  prova.ll
labs/lab-fusion/: comandi.md
labs/lab-fusion/src/: CMakeLists.txt  lab-fusion.cpp
labs/lab-fusion/test/: FusibleLoops.c  FusibleLoops.ll  FusibleLoops.m2r.ll
labs/lab-licm/test/: Loop.m2r.ll
labs/lab-loops/src/: CMakeLists.txt  lab-loops.cpp
labs/lab-loops/test/: Loop.c  Loop.ll  Loop.m2r.ll
labs/lab1/: Fibonacci.ll  Loop.O0.ll  Loop.ll  Loop.m2r.ll  TestPass.cpp
labs/lab2/src/: CMakeLists.txt  LocalOpts.cpp
labs/lab2/test/: Foo.ll  Foo.optimized.ll  Foo.strength_reduction.ll
labs/lab3/src/: CMakeLists.txt  lab3.cpp
labs/lab3/test/: AltriLoop.ll  Loop.ll  Loop.m2r.ll  LoopInnestati.ll  LoopMultipli.ll
mlir_stuff/: asd.md  mlir_traverser.cpp
mlir_stuff/cir-tests/: comandi.md  matmul.canonicalized.cir  matmul.cir  matmul.cpp  matmul.ll  matmul.llvm.mlir  optimize-cir.sh
mlir_stuff/cir-tests/kernel/: conv1d.c  conv2d.c  dotp.c  dotp.cir  matmul.c  produce-cir.sh  vec_sum.c
mlir_stuff/cir-tool/: CMakeLists.txt  README.md
mlir_stuff/cir-tool/include/Standalone/: CMakeLists.txt
mlir_stuff/cir-tool/lib/Standalone/: CMakeLists.txt
mlir_stuff/cir-tool/standalone-opt/: CMakeLists.txt  standalone-opt.cpp
mlir_stuff/cir-tool/test/: CMakeLists.txt  lit.cfg.py
mlir_stuff/cir-tool/test/Standalone/: matmul.opt.cir
mlir_stuff/esempio-lowering/: es.linalg.fusion.mlir  es.linalg.mlir  test.mlir
mlir_stuff/simple-def-use-pass/: CMakeLists.txt  mlir_def-use_traverser.cpp
mlir_stuff/transform/: comandi.md  linalg_vectorize.1.mlir  linalg_vectorize.2.mlir  linalg_vectorize.mlir  linalg_vectorize_dynamic.1.mlir  linalg_vectorize_dynamic.2.mlir  linalg_vectorize_dynamic.mlir  transform_basics.mlir
toy-external/: CMakeLists.txt
toy-external/include/frontend/: AST.h  Lexer.h  MLIRGen.h  Parser.h
toy-external/include/toy/: CMakeLists.txt  Passes.h  ToyCombine.td  ToyDialect.h  ToyDialect.td  ToyOps.h  ToyOps.td
toy-external/lib/toy/: CMakeLists.txt  ToyDialect.cpp  ToyOps.cpp
toy-external/lib/toy/transforms/: LowerToAffineLoops.cpp  LowerToLLVM.cpp  ShapeInferencePass.cpp  ToyCombine.cpp
toy-external/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
toy-external/test/toy/: affine-lowering.mlir  ast.toy  codegen.toy  constant.toy  empty.toy  invalid.mlir  jit.toy  llvm-lowering.mlir  matmul.toy  matmul_invalid.toy  matmul_jit.toy  matmul_lowering.toy  scalar.toy  shape_inference.mlir  transpose_transpose.toy  trivial_reshape.toy
toy-external/toy/: AST.cpp  CMakeLists.txt  toyc.cpp
toy-external/toy/frontend/: MLIRGen.cpp
